# Pytorch-Tutorials

./: .gitignore  README.md
Explainable AI/: Shapash Overview.ipynb
Natural Language Processing/: 01 - Introduction to NLP: Bag of Words + TF-IDF.ipynb  01_0 - Introduction to Embeddings.ipynb  01_1 - Character-Level Language Model.ipynb  02 - Torchtext tutorial.ipynb  03_1 - Introduction to Einsum.ipynb  04 - Seq2Seq with LSTM Encoder-Decoder Architecture.ipynb  05 - Seq2Seq with Attention.ipynb  06 - Transformers from scratch.ipynb  07 - Transformers.ipynb  07_1 - Translation_from_scratch_using_fairseq.ipynb  NLP_utils.py
P1 - Pytorch Basics/: Tutorial 1 - Understanding Tensors In Pytorch.ipynb  Tutorial 10 - Data Transforms.ipynb  Tutorial 11 - Softmax and Cross Entropy.ipynb  Tutorial 12 - Deep Neural Network.ipynb  Tutorial 12.1 - Deep NN Custom Loss.ipynb  Tutorial 13 - Convolutional Neural Network.ipynb  Tutorial 13.01 - CNNs with added Noise in Parameters and Gradients.ipynb  Tutorial 13.10 - Residual Networks.ipynb  Tutorial 13.11 - Nested Residual Networks.ipynb  Tutorial 13.12 - Fully Connected Residual Networks.ipynb  Tutorial 13.13 - FN-Residual Networks with Data Augmentation.ipynb  Tutorial 13.20 - Inception Network.ipynb  (+31 more)
TorchScript-Tutorial/: CMakeLists.txt  example-app.cpp
TorchScript-Tutorial/python/: Tutorial 7 - Linear Regression.ipynb
TorchScript-Tutorial/python/model/: linear_regressor.ts
TorchScript-for-Auto-Chord-Generation/: CMakeLists.txt  lib.cpp  main.cpp
TorchScript-for-Auto-Chord-Generation/model/: ChordPredictor.ts
(+84 files in other folders)
